--- a/index.html
+++ b/index.html
@@ -1,212 +1,322 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BTC Invest</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BTC Invest - Painel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0e0e0e;
-      color: #fff;
-    }
-    header, footer, nav, section {
-      padding: 20px;
-      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      background: url('https://images.unsplash.com/photo-1554224154-22dec7ec8818?ixlib=rb-4.0.3&auto=format&fit=crop&w=1400&q=80') no-repeat center center fixed;
+      background-size: cover;
+      padding-top: 80px;
+      padding-bottom: 60px;
     }
     header {
-      background-color: #111;
-      border-bottom: 2px solid #0a84ff;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2em;
-      color: #0a84ff;
-    }
-    nav {
-      background-color: #1c1c1c;
-    }
-    nav a {
-      margin: 0 10px;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      background-color: #121212;
-    }
-    .hero h2 {
-      font-size: 1.8em;
-    }
-    .hero button {
-      margin-top: 20px;
-      padding: 12px 24px;
-      font-size: 1em;
-      background-color: #0a84ff;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    .packages {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-    .package {
-      background-color: #1e1e1e;
+      background: #0a67e0;
+      color: white;
       padding: 20px;
-      width: 90%;
-      max-width: 300px;
-      border-radius: 10px;
-      border: 1px solid #333;
-    }
-    .package h3 {
-      color: #0a84ff;
-    }
-    .package a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #0a84ff;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-    }
-    .service p {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    form {
-      max-width: 400px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    input[type="text"], input[type="password"] {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      font-size: 1em;
-    }
-    input[type="submit"] {
-      background-color: #0a84ff;
-      color: #fff;
-      border: none;
-      padding: 12px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    .dashboard {
-      display: none;
-      background-color: #1e1e1e;
-      padding: 20px;
-      max-width: 600px;
-      margin: 20px auto;
-      border-radius: 10px;
-    }
-    .dashboard h2 {
-      color: #0a84ff;
-    }
-    .dashboard p {
-      line-height: 1.6;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 999;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
     footer {
-      background-color: #1c1c1c;
-      font-size: 0.9em;
-      color: #aaa;
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      backdrop-filter: blur(5px);
+    }
+    .box {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      max-width: 500px;
+      width: 100%;
+      margin-top: 40px;
+    }
+    .box h2 {
+      text-align: center;
+      margin-bottom: 24px;
+      color: #333;
+    }
+    .box input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    .box button {
+      width: 100%;
+      padding: 12px;
+      background: linear-gradient(to right, #0a67e0, #0052cc);
+      color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .box button:hover {
+      opacity: 0.9;
+    }
+    #msgErro {
+      color: red;
+      text-align: center;
+    }
+    #investimentos button {
+      width: 100%;
+      margin-top: 10px;
+    }
+    #menuPainel button {
+      width: auto;
+      margin-right: 10px;
     }
   </style>
-  <script>
-    function simularLogin(event) {
-      event.preventDefault();
-      document.getElementById("login").style.display = "none";
-      document.getElementById("dashboard").style.display = "block";
-    }
-  </script>
 </head>
 <body>
   <header>
     <h1>BTC Invest</h1>
-    <p>Sua porta de entrada para rendimentos inteligentes</p>
+    <p>Seu painel de investimentos seguro</p>
   </header>
-
-  <nav>
-    <a href="#">Início</a>
-    <a href="#pacotes">Pacotes</a>
-    <a href="#servicos">Serviços</a>
-    <a href="#cadastro">Cadastro</a>
-    <a href="#login">Login</a>
-    <a href="#contato">Contato</a>
-  </nav>
-
-  <section class="hero">
-    <h2>Invista com segurança e retorno garantido</h2>
-    <a href="https://t.me/Suportbtcinvest"><button>Quero investir hoje</button></a>
-  </section>
-
-  <section class="packages" id="pacotes">
-    <div class="package">
-      <h3>Pacote R$500</h3>
-      <p>Retorno estimado de até 8% ao mês.</p>
-      <a href="https://t.me/Suportbtcinvest">Quero investir</a>
+  <div class="container">
+    <div id="loginBox" class="box">
+      <h2>Login BTC Invest</h2>
+      <input type="email" id="email" placeholder="Email" />
+      <input type="password" id="senha" placeholder="Senha" />
+      <button onclick="entrar()">Entrar</button>
+      <p style="text-align:center;">ou</p>
+      <button onclick="mostrarCadastro()">Criar Conta</button>
+      <p id="msgErro"></p>
     </div>
-    <div class="package">
-      <h3>Pacote R$1000</h3>
-      <p>Retorno estimado de até 8% ao mês.</p>
-      <a href="https://t.me/Suportbtcinvest">Quero investir</a>
+
+    <div id="cadastroBox" class="box" style="display:none;">
+      <h2>Criação de Conta</h2>
+      <input type="text" id="nomeCompleto" placeholder="Nome completo" />
+      <input type="text" id="cpf" placeholder="CPF" />
+      <input type="text" id="endereco" placeholder="Endereço" />
+      <input type="text" id="pixChave" placeholder="Chave Pix" />
+      <input type="email" id="novoEmail" placeholder="Email" />
+      <input type="password" id="novaSenha" placeholder="Senha" />
+      <button onclick="criarConta()">Criar Conta</button>
     </div>
-    <div class="package">
-      <h3>Pacote R$1500</h3>
-      <p>Retorno estimado de até 8% ao mês.</p>
-      <a href="https://t.me/Suportbtcinvest">Quero investir</a>
+
+    <div id="investimentos" class="box" style="display:none;">
+      <h2>Escolha seu investimento</h2>
+      <button onclick="selecionarInvestimento(500)">Investir R$500</button>
+      <button onclick="selecionarInvestimento(1000)">Investir R$1000</button>
+      <button onclick="selecionarInvestimento(1500)">Investir R$1500</button>
+      <button onclick="selecionarInvestimento(3000)">Investir R$3000</button>
+      <div id="pixInfo" style="display:none; margin-top:20px;">
+        <p><strong>Chave PIX:</strong> btcinvestbr@gmail.com</p>
+        <p>Encaminhe o comprovante para o suporte:</p>
+        <a href="https://t.me/Suportbtcinvest" target="_blank" style="display:inline-block; margin-top:10px; background:#0088cc; color:#fff; padding:12px 20px; text-decoration:none; border-radius:8px; font-weight:bold;">Enviar Comprovante</a>
+      </div>
     </div>
-    <div class="package">
-      <h3>Pacote R$3000</h3>
-      <p>Retorno estimado de até 8% ao mês.</p>
-      <a href="https://t.me/Suportbtcinvest">Quero investir</a>
+
+    <div id="painel" class="box" style="display:none;">
+      <h2>BTC Invest - Painel do Investidor</h2>
+      <div style="margin-bottom: 20px;" id="menuPainel">
+        <button onclick="mostrarPainel()">Painel</button>
+        <button onclick="mostrarRendimentos()">Rendimentos</button>
+        <button onclick="mostrarSaque()">Saque</button>
+        <button onclick="mostrarSuporte()">Suporte</button>
+        <button onclick="mostrarQuemSomos()">Quem somos</button>
+        <button id="btnSair" style="background:#e53935;">Sair</button>
+      </div>
+      <div id="painelPrincipal">
+        <p>Bem-vindo ao Painel da <strong>BTC Invest</strong></p>
+        <p>Aqui você poderá acompanhar suas movimentações.</p>
+      </div>
+      <div id="abaSuporte" style="display:none;">
+        <h3>Suporte BTC Invest</h3>
+        <p>Para falar com nosso time de suporte, clique no botão abaixo:</p>
+        <a href="https://t.me/Suportbtcinvest" target="_blank" style="display:inline-block; margin-top:20px; background:#0088cc; color:#fff; padding:12px 20px; text-decoration:none; border-radius:8px; font-weight:bold;">Falar com Suporte no Telegram</a>
+      </div>
+      <div id="abaRendimentos" style="display:none;">
+        <h3>Rendimentos Mensais</h3>
+        <table border="1" cellpadding="10" style="border-collapse: collapse; width: 100%; background-color:#fff;">
+          <thead style="background:#eee;">
+            <tr><th>Mês</th><th>Rentabilidade</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>Janeiro</td><td>6.5%</td></tr>
+            <tr><td>Fevereiro</td><td>7.1%</td></tr>
+            <tr><td>Março</td><td>7.8%</td></tr>
+            <tr><td>Abril</td><td>6.9%</td></tr>
+            <tr><td>Maio</td><td>8.0%</td></tr>
+            <tr><td>Junho</td><td>7.6%</td></tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="abaQuemSomos" style="display:none;">
+        <h3>Quem Somos</h3>
+        <p>Somos um grupo empresarial com mais de 10 anos de experiência no mercado financeiro, onde pagamos até <strong>8% ao mês</strong> para todos nossos associados.</p>
+      </div>
+      <div id="abaSaque" style="display:none;">
+        <h3>Solicitar Saque</h3>
+        <p>Você pode solicitar um saque com taxa de <strong>3%</strong> sobre o valor.</p>
+        <input type="number" id="valorSaque" placeholder="Valor a sacar (R$)" />
+        <button onclick="calcularSaque()">Calcular Valor Líquido</button>
+        <p id="resultadoSaque" style="margin-top:15px; font-weight:bold;"></p>
+      </div>
     </div>
-  </section>
-
-  <section class="service" id="servicos">
-    <p>Operamos no mercado financeiro de forma mais segura possível, pagamos até 8% ao mês, somos uma equipe com mais de 10 anos de mercado onde operamos e distribuímos uma % para os acionistas.</p>
-  </section>
-
-  <section id="cadastro">
-    <h2>Cadastro</h2>
-    <form>
-      <input type="text" placeholder="Nome completo" required>
-      <input type="text" placeholder="Email" required>
-      <input type="password" placeholder="Criar senha" required>
-      <input type="submit" value="Cadastrar">
-    </form>
-  </section>
-
-  <section id="login">
-    <h2>Login</h2>
-    <form onsubmit="simularLogin(event)">
-      <input type="text" placeholder="Email" required>
-      <input type="password" placeholder="Senha" required>
-      <input type="submit" value="Entrar">
-    </form>
-  </section>
-
-  <section class="dashboard" id="dashboard">
-    <h2>Área Restrita - Rendimento Mensal</h2>
-    <p>Bem-vindo! Aqui estão os seus rendimentos simulados:</p>
-    <ul>
-      <li>📅 Maio: + R$ 240,00</li>
-      <li>📅 Junho: + R$ 252,00</li>
-      <li>📅 Julho: + R$ 260,00 (estimado)</li>
-    </ul>
-  </section>
-
+  </div>
   <footer>
     &copy; 2025 BTC Invest. Todos os direitos reservados.
   </footer>
+
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDMlE3ljSbAv9QNnvspqyewIJANJJyLPZM",
+      authDomain: "btcinvestbr.firebaseapp.com",
+      projectId: "btcinvestbr",
+      storageBucket: "btcinvestbr.appspot.com",
+      messagingSenderId: "867549398021",
+      appId: "1:867549398021:web:916df8bf77ea302698c86c"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    function mostrarCadastro() {
+      document.getElementById('loginBox').style.display = 'none';
+      document.getElementById('cadastroBox').style.display = 'block';
+      document.getElementById('msgErro').textContent = "";
+    }
+
+    function criarConta() {
+      const nome = document.getElementById("nomeCompleto").value.trim();
+      const cpf = document.getElementById("cpf").value.trim();
+      const endereco = document.getElementById("endereco").value.trim();
+      const pix = document.getElementById("pixChave").value.trim();
+      const email = document.getElementById("novoEmail").value.trim();
+      const senha = document.getElementById("novaSenha").value.trim();
+
+      if (!nome || !cpf || !endereco || !pix || !email || !senha) {
+        alert("Por favor, preencha todos os campos.");
+        return;
+      }
+      auth.createUserWithEmailAndPassword(email, senha)
+        .then(() => {
+          mostrarInvestimentos();
+        })
+        .catch(err => alert(err.message));
+    }
+
+    function mostrarInvestimentos() {
+      document.getElementById('cadastroBox').style.display = 'none';
+      document.getElementById('investimentos').style.display = 'block';
+      document.getElementById('painel').style.display = 'block';
+      document.getElementById('menuPainel').style.display = 'none';
+      esconderTodasAbas();
+      document.getElementById('painelPrincipal').style.display = 'none';
+      document.getElementById('pixInfo').style.display = 'none';
+    }
+
+    function selecionarInvestimento(valor) {
+      const pixInfo = document.getElementById("pixInfo");
+      pixInfo.style.display = "block";
+      pixInfo.scrollIntoView({ behavior: "smooth" });
+    }
+
+    function entrar() {
+      const email = document.getElementById('email').value.trim();
+      const senha = document.getElementById('senha').value.trim();
+      if (!email || !senha) {
+        document.getElementById('msgErro').textContent = "Preencha todos os campos.";
+        return;
+      }
+      auth.signInWithEmailAndPassword(email, senha)
+        .catch(err => document.getElementById('msgErro').textContent = err.message);
+    }
+
+    window.onload = () => {
+      const painel = document.getElementById('painel');
+      const loginDiv = document.getElementById('loginBox');
+      const cadastroDiv = document.getElementById('cadastroBox');
+      const investimentosDiv = document.getElementById('investimentos');
+      const menuPainel = document.getElementById('menuPainel');
+      const btnSair = document.getElementById('btnSair');
+
+      auth.onAuthStateChanged(user => {
+        if (user) {
+          painel.style.display = 'block';
+          loginDiv.style.display = 'none';
+          cadastroDiv.style.display = 'none';
+          investimentosDiv.style.display = 'none';
+          menuPainel.style.display = 'block';
+          mostrarPainel();
+        } else {
+          painel.style.display = 'none';
+          loginDiv.style.display = 'block';
+          cadastroDiv.style.display = 'none';
+          investimentosDiv.style.display = 'none';
+        }
+      });
+
+      btnSair.onclick = () => {
+        if (confirm("Deseja realmente sair?")) {
+          auth.signOut();
+        }
+      };
+    };
+
+    function esconderTodasAbas() {
+      document.getElementById("painelPrincipal").style.display = "none";
+      document.getElementById("abaRendimentos").style.display = "none";
+      document.getElementById("abaSaque").style.display = "none";
+      document.getElementById("abaSuporte").style.display = "none";
+      document.getElementById("abaQuemSomos").style.display = "none";
+    }
+    function mostrarPainel() {
+      esconderTodasAbas();
+      document.getElementById("painelPrincipal").style.display = "block";
+    }
+    function mostrarRendimentos() {
+      esconderTodasAbas();
+      document.getElementById("abaRendimentos").style.display = "block";
+    }
+    function mostrarSaque() {
+      esconderTodasAbas();
+      document.getElementById("abaSaque").style.display = "block";
+    }
+    function mostrarSuporte() {
+      esconderTodasAbas();
+      document.getElementById("abaSuporte").style.display = "block";
+    }
+    function mostrarQuemSomos() {
+      esconderTodasAbas();
+      document.getElementById("abaQuemSomos").style.display = "block";
+    }
+
+    function calcularSaque() {
+      const valor = parseFloat(document.getElementById("valorSaque").value);
+      if (isNaN(valor) || valor <= 0) {
+        document.getElementById("resultadoSaque").textContent = "Digite um valor válido.";
+        return;
+      }
+      const taxa = 0.03;
+      const liquido = valor - (valor * taxa);
+      document.getElementById("resultadoSaque").textContent = `Você receberá R$ ${liquido.toFixed(2)} após a taxa de 3%.`;
+    }
+  </script>
 </body>
 </html>
