--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: url('https://images.unsplash.com/photo-1554224154-22dec7ec8818?ixlib=rb-4.0.3&auto=format&fit=crop&w=1400&q=80') no-repeat center center fixed;
+      background: url('/mnt/data/8e532611-7cb5-44df-842c-b209b4157724.png') no-repeat center center fixed;
       background-size: cover;
       padding-top: 80px;
       padding-bottom: 60px;
@@ -36,7 +36,7 @@
     }
     .container {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: flex-start;
       min-height: 100vh;
       backdrop-filter: blur(5px);
@@ -80,10 +80,6 @@
       color: red;
       text-align: center;
     }
-    #investimentos button {
-      width: 100%;
-      margin-top: 10px;
-    }
     #menuPainel button {
       width: auto;
       margin-right: 10px;
@@ -110,24 +106,9 @@
       <h2>Criação de Conta</h2>
       <input type="text" id="nomeCompleto" placeholder="Nome completo" />
       <input type="text" id="cpf" placeholder="CPF" />
-      <input type="text" id="endereco" placeholder="Endereço" />
-      <input type="text" id="pixChave" placeholder="Chave Pix" />
       <input type="email" id="novoEmail" placeholder="Email" />
       <input type="password" id="novaSenha" placeholder="Senha" />
       <button onclick="criarConta()">Criar Conta</button>
-    </div>
-
-    <div id="investimentos" class="box" style="display:none;">
-      <h2>Escolha seu investimento</h2>
-      <button onclick="selecionarInvestimento(500)">Investir R$500</button>
-      <button onclick="selecionarInvestimento(1000)">Investir R$1000</button>
-      <button onclick="selecionarInvestimento(1500)">Investir R$1500</button>
-      <button onclick="selecionarInvestimento(3000)">Investir R$3000</button>
-      <div id="pixInfo" style="display:none; margin-top:20px;">
-        <p><strong>Chave PIX:</strong> btcinvestbr@gmail.com</p>
-        <p>Encaminhe o comprovante para o suporte:</p>
-        <a href="https://t.me/Suportbtcinvest" target="_blank" style="display:inline-block; margin-top:10px; background:#0088cc; color:#fff; padding:12px 20px; text-decoration:none; border-radius:8px; font-weight:bold;">Enviar Comprovante</a>
-      </div>
     </div>
 
     <div id="painel" class="box" style="display:none;">
@@ -167,9 +148,8 @@
       </div>
       <div id="abaQuemSomos" style="display:none;">
         <h3>Quem Somos</h3>
-        <p>BTC Invest é simplesmente um grupo de empresários gestores que atua no mercado de renda variável há mais de 10 anos, encontrando sempre maneiras e soluções para obter o máximo de lucro com a maior segurança possível nesse mercado multimilionário.</p>
-        <p>O mercado de renda variável movimenta quantias astronômicas acima de 7 trilhões de reais...</p>
-        <p><strong>QUAL NOSSA MISSÃO?</strong> Levar para nossos associados uma maneira de obter uma renda expressiva através do nosso mercado que está sempre em crescimento, e com isso crescermos juntos.</p>
+        <p>BTC Invest é simplesmente um grupo de empresários gestores que atua no mercado de renda variável há mais de 10 anos...</p>
+        <p><strong>Missão:</strong> Levar aos associados uma renda expressiva através do nosso modelo de operação no mercado financeiro.</p>
         <p><strong>Oferecemos até 8% ao mês para todos nossos associados.</strong></p>
       </div>
       <div id="abaSaque" style="display:none;">
@@ -209,49 +189,20 @@
     function criarConta() {
       const nome = document.getElementById("nomeCompleto").value.trim();
       const cpf = document.getElementById("cpf").value.trim();
-      const endereco = document.getElementById("endereco").value.trim();
-      const pix = document.getElementById("pixChave").value.trim();
       const email = document.getElementById("novoEmail").value.trim();
       const senha = document.getElementById("novaSenha").value.trim();
 
-      if (!nome || !cpf || !endereco || !pix || !email || !senha) {
+      if (!nome || !cpf || !email || !senha) {
         alert("Por favor, preencha todos os campos.");
         return;
       }
       auth.createUserWithEmailAndPassword(email, senha)
         .then(() => {
-          mostrarInvestimentos();
-        })
-        .catch(err => alert(err.message));
-    }
-
-    function mostrarInvestimentos() {
-      document.getElementById('cadastroBox').style.display = 'none';
-      document.getElementById('investimentos').style.display = 'block';
-      document.getElementById('painel').style.display = 'none';
-      document.getElementById('menuPainel').style.display = 'none';
-      document.getElementById('pixInfo').style.display = 'none';
-      document.querySelector('.container').style.justifyContent = 'center';
-    }
-
-    function selecionarInvestimento(valor) {
-      const pixInfo = document.getElementById("pixInfo");
-      pixInfo.style.display = "block";
-      pixInfo.scrollIntoView({ behavior: "smooth" });
-
-      setTimeout(() => {
-        const user = firebase.auth().currentUser;
-        if (user) {
-          document.getElementById('investimentos').style.display = 'none';
+          document.getElementById('cadastroBox').style.display = 'none';
           document.getElementById('painel').style.display = 'block';
           document.getElementById('menuPainel').style.display = 'block';
-          document.querySelector('.container').style.justifyContent = 'space-around';
-          mostrarPainel();
-        } else {
-          alert("Você precisa estar logado para acessar o painel.");
-          window.location.reload();
-        }
-      }, 600000); // 10 minutos
+        })
+        .catch(err => alert(err.message));
     }
 
     function entrar() {
@@ -269,7 +220,6 @@
       const painel = document.getElementById('painel');
       const loginDiv = document.getElementById('loginBox');
       const cadastroDiv = document.getElementById('cadastroBox');
-      const investimentosDiv = document.getElementById('investimentos');
       const menuPainel = document.getElementById('menuPainel');
       const btnSair = document.getElementById('btnSair');
 
@@ -278,17 +228,12 @@
           painel.style.display = 'block';
           loginDiv.style.display = 'none';
           cadastroDiv.style.display = 'none';
-          investimentosDiv.style.display = 'none';
           menuPainel.style.display = 'block';
-          document.querySelector('.container').style.justifyContent = 'space-around';
-          mostrarPainel();
         } else {
           painel.style.display = 'none';
           loginDiv.style.display = 'block';
           cadastroDiv.style.display = 'none';
-          investimentosDiv.style.display = 'none';
           menuPainel.style.display = 'none';
-          document.querySelector('.container').style.justifyContent = 'center';
         }
       });
 
@@ -336,10 +281,8 @@
       }
       const taxa = 0.03;
       const liquido = valor - (valor * taxa);
-      document.getElementById("resultadoSaque").textContent = Você receberá R$ ${liquido.toFixed(2)} após a taxa de 3%.;
+      document.getElementById("resultadoSaque").textContent = `Você receberá R$ ${liquido.toFixed(2)} após a taxa de 3%.`;
     }
   </script>
 </body>
 </html>
-
-
