--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div id="abaSuporte" style="display:none;">
         <h3>Suporte</h3>
         <p>Fale conosco pelo Telegram:</p>
-        <a href="https://t.me/Suportbtcinvest" target="_blank">Clique aqui para atendimento</a>
+        <a href="https://t.me/supbtcinvest" target="_blank">Clique aqui para atendimento</a>
       </div>
       <div id="abaQuemSomos" style="display:none;">
         <h3>Quem Somos</h3>
@@ -275,3 +275,4 @@
   </script>
 </body>
 </html>
+
