--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p><strong>Parabéns pela sua escolha de ir em busca da liberdade financeira.</strong></p>
         <p>Seja bem-vindo à <strong>BTC Invest</strong>.</p>
       </div>
-      <div id="abaRendimentos" style="display:none;">
+      <divisão id="abaRendimentos" stilo="display:none;">
   <h3>Rendimentos Mensais</h3>
   <ul>
     <li>Janeiro: 6.5%</li>
