--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
         <p><strong>Parabéns pela sua escolha de ir em busca da liberdade financeira.</strong></p>
         <p>Seja bem-vindo à <strong>BTC Invest</strong>.</p>
       </div>
-      <divisão id="abaRendimentos" stilo="display:none;">
-  <h3>Rendimentos Mensais</h3>
-  <ul>
-    <li>Janeiro: 6.5%</li>
-    <li>Fevereiro: 7.1%</li>
-    <li>Março: 7.8%</li>
-    <li>Abril: 6.9%</li>
-    <li>Maio: 8.0%</li>
-    <li>Junho: 7.6%</li>
-    <li>Julho: 6%</li>
-  </ul>
-</div>
+      <div id="abaRendimentos" style="display:none;">
+        <h3>Rendimentos Mensais</h3>
+        <ul>
+          <li>Janeiro: 6.5%</li>
+          <li>Fevereiro: 7.1%</li>
+          <li>Março: 7.8%</li>
+          <li>Abril: 6.9%</li>
+          <li>Maio: 8.0%</li>
+          <li>Junho: 7.6%</li>
+          <li>Julho: 6%</li>
+        </ul>
+      </div>
       <div id="abaSaque" style="display:none;">
         <h3>Solicitar Saque</h3>
         <p>Você pode solicitar um saque com taxa de <strong>3%</strong> sobre o valor.</p>
